[BUTTON LINKS] Icon vertical alignement, corrected disabled color

--- a/src/scss/common/components/_buttons.scss
+++ b/src/scss/common/components/_buttons.scss
@@ -117,6 +117,7 @@ fieldset:disabled a.btn {
   }
 
   [class^="icons-"] {
+    padding-bottom: .25rem;
     font-size: rem(13px);
   }
 
