--- a/src/scss/common/settings/_variables.scss
+++ b/src/scss/common/settings/_variables.scss
@@ -474,7 +474,7 @@ $btn-focus-box-shadow:        $input-btn-focus-box-shadow;
 $btn-disabled-opacity:        1; // .65;
 $btn-active-box-shadow:       0; // inset 0 3px 5px rgba($black, .125);
 
-$btn-link-disabled-color:     $gray-600;
+$btn-link-disabled-color:     $gray-300;
 
 $btn-block-spacing-y:         .5rem;
 
